[tool.poetry]
name = "goit-algo-hw-06"
version = "0.1.0"
description = ""
authors = ["blavikensbutcher <v.pidnebesnyi@omisoft.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
networkx = {extras = ["default"], version = "^3.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

